[gd_scene load_steps=2 format=3 uid="uid://dkovj4g0n2w3f"]

[ext_resource type="Script" uid="uid://c3etpgc35a1om" path="res://src/ui/main_menu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
